--- a/.gitignore
+++ b/.gitignore
@@ -5,21 +5,21 @@
 .war
 
 # gwt caches and compiled units #
-wargwt_bree
-gwt-unitCache
+war/gwt_bree
+gwt-unitCache/
 
 # boilerplate generated classes #
-.apt_generated
+.apt_generated/
 
 # more caches and things from deploy #
-warWEB-INFdeploy
-warWEB-INFclasses
+war/WEB-INF/deploy
+war/WEB-INF/classes
 
 #compilation logs
-.gwt
+.gwt/
 
 #gwt junit compilation files
-www-test
+www-test/
 
 #old GWT (1.5) created this dir
-.gwt-tmp
+.gwt-tmp/
